reorganized base files

--- a/contact.html
+++ b/contact.html
@@ -183,6 +183,6 @@
         </div>
     </footer>
 
-<script src="contact-script.js"></script>
+<script src="./scripts/contact-scripts.js"></script>
 </body>
-</html>
+</html>ß
