cleaned up database code and removed gallery section in index

--- a/index.html
+++ b/index.html
@@ -112,12 +112,15 @@
                 </div>
                 <div class="product-buttons-section">
                     <div class="product-button-1">
-                        <button class="product-buttons">Featured</button>
+                        <button class="produt-buttons">All</button>
                     </div>
                     <div class="product-button-2">
-                        <button class="product-buttons">Bestseller</button>
+                        <button class="product-buttons">Featured</button>
                     </div>
                     <div class="product-button-3">
+                        <button class="product-buttons">Bestseller</button>
+                    </div>
+                    <div class="product-button-4">
                         <button class="product-buttons">Latest</button>
                     </div>
                 </div>
@@ -126,101 +129,9 @@
 
         <section class="plant-list">
             <div class="wrapper">
-                <div class="plant-list-item-1">
-                    <div class="relative-parent">
-                        <img src="./assets/p2.jpeg" alt="Picture of American Merigold">
-
-                        <div class="absolute-child">
-                            <img src="./assets/icons/cart.svg" alt="Add American Marigold to cart">
-                        </div>
-                    </div>
-                    <h4>American Marigold</h4>
-                    <p>$23.45</p>
-                </div>
-
-                <div class="plant-list-item-2">
-                    <div class="relative-parent">
-                        <img src="./assets/p1.jpeg" alt="Picture of Black Eyed Susan">
-
-                        <div class="absolute-child">
-                            <img src="./assets/icons/cart.svg" alt="Add Black Eyed Susan to cart">
-                        </div>
-                    </div>
-                    <h4>Black Eyed Susan</h4>
-                    <p>$25.45</p>
-                </div>
-
-                <div class="plant-list-item-3">
-                    <div class="relative-parent">
-                        <img src="./assets/p3.jpeg" alt="Picture of Bleeding Heart">
-
-                        <div class="absolute-child">
-                            <img src="./assets/icons/cart.svg" alt="Add Bleeding Heart to cart">
-                        </div>
-                    </div>
-                    <h4>Bleeding Heart</h4>
-                    <p>$30.45</p>
-                </div>
-
-                <div class="plant-list-item-4">
-                    <div class="relative-parent">
-                        <img src="./assets/p4.jpeg" alt="Picture of Bloody Cranesbill">
-
-                        <div class="absolute-child">
-                            <img src="./assets/icons/cart.svg" alt="Add Bloody Cranesbill to cart">
-                        </div>
-                    </div>
-                    <h4>Bloody Cranesbill</h4>
-                    <p>$45.00</p>
-                </div>
-
-                <div class="plant-list-item-5">
-                    <div class="relative-parent">
-                        <img src="./assets/p5.jpeg" alt="Picture of Butterfly Weed">
-
-                        <div class="absolute-child">
-                            <img src="./assets/icons/cart.svg" alt="Add Butterfly Weed to cart">
-                        </div>
-                    </div>
-                    <h4>Butterfly Weed</h4>
-                    <p>$50.45</p>
-                </div>
-
-                <div class="plant-list-item-6" id="plant-list-item-6">
-                    <div class="relative-parent">
-                        <img src="./assets/p6.jpeg" alt="Picture of Common Yarrow">
-
-                        <div class="absolute-child">
-                            <img src="./assets/icons/cart.svg" alt="Add Common Yarrow to cart">
-                        </div>
-                    </div>
-                    <h4>Common Yarrow</h4>
-                    <p>$65.00</p>
-                </div>
-
-                <div class="plant-list-item-7">
-                    <div class="relative-parent">
-                        <img src="./assets/p7.jpeg" alt="Picture of Doublefile Viburnum">
-
-                        <div class="absolute-child">
-                            <img src="./assets/icons/cart.svg" alt="Add Doublefile Viburnum to cart">
-                        </div>
-                    </div>
-                    <h4>Doublefile Viburnum</h4>
-                    <p>$67.45</p>
-                </div>
-
-                <div class="plant-list-item-8">
-                    <div class="relative-parent">
-                        <img src="./assets/p8.jpeg" alt="Picture of Feather Reed Grass">
-
-                        <div class="absolute-child">
-                            <img src="./assets/icons/cart.svg" alt="Add Doublefile Viburnum to cart">
-                        </div>
-                    </div>
-                    <h4>Feather Reed Grass</h4>
-                    <p>$20.00</p>
-                </div>
+                <ul class="inventory">
+                    
+                </ul>
             </div>
         </section>
 
