product cards are back

--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
             </div>
         </section>
 
-        <section class="plant-list">
+        <section id ="plant" class="plant-list flexContainer">
             <div class="wrapper">
-                <ul class="inventory">
+                <ul id="inventory">
                     
                 </ul>
             </div>
