filter buttons complete with display, needs styling

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
         <section class="plant-list">
             <div class="wrapper">
-                <ul class="inventory">
+                <ul id="inventory">
                     
                 </ul>
             </div>
