--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 </div>
                 <div class="product-buttons-section">
                     <div class="product-button-1">
-                        <button class="produt-buttons">All</button>
+                        <button class="product-buttons">All</button>
                     </div>
                     <div class="product-button-2">
                         <button class="product-buttons">Featured</button>
