updated All filter button, added favourite and add to cart button on all filtered items

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 </div>
                 <div class="product-buttons-section">
                     <div class="product-button-1">
-                        <button class="product-buttons">All</button>
+                        <button id="all-button">All</button>
                     </div>
                     <div class="product-button-2">
                         <button id="featured-button">Featured</button>
