additional styling added for product cards, like and add to cart buttons with js

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
         <section id ="plant" class="plant-list flexContainer">
             <div class="wrapper">
-                <ul id="inventory">
+                <ul id="inventory" class="inventory">
                     
                 </ul>
             </div>
