mvp 3, added code for add to cart feature

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 
                 <div class="shopping-bag-container">
                     <img src="./assets/icons/shopping-bag.svg" alt="Shopping bag icon">
+                    <span class="sup" id="cart">0</span>
                 </div>
             </div>
         </section>
