fixed responsiveness on pay-info and blog section

--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
                     <button class="hero-button"><a href="#">Discover Now</a></button>
                 </div>
                 
-                <div class="header-image-container">
+                <!-- <div class="header-image-container">
                     <img src="./assets/header.png" alt="Plants in pots">
-                </div>
+                </div> -->
             </div>
         </section>
 
@@ -183,23 +183,29 @@
         <section class="blog-body" id="blog-body">
             <div class="wrapper blog-post-parent">
                 <div class="blog-post-1 blog-post-child">
-                    <p class="blog-date"> By: Admin 24 April 2021</p>
-                    <h4>Aenean Vulputate Lorem</h4>
-                    <p class="blog-text">Lorem ipsum dolor sit amet, consecteturl adipisl elit, sed do eiusmod tempor incidio ut labore et dolore magna aliqua.</p>
+                    <div class="blog-text">
+                        <p class="blog-date"> By: Admin 24 April 2021</p>
+                        <h4>Aenean Vulputate Lorem</h4>
+                        <p class="blog-text">Lorem ipsum dolor sit amet, consecteturl adipisl elit, sed do eiusmod tempor incidio ut labore et dolore magna aliqua.</p>
+                    </div>
                     <img src="./assets/blog3.jpeg" alt="Person holding a tray of succulents">
                 </div>
 
                 <div class="blog-post-2 blog-post-child">
-                    <p class="blog-date"> By: Admin 24 April 2021</p>
-                    <h4>There Are Many Variations</h4>
-                    <p class="blog-text">Lorem ipsum dolor sit amet, consecteturl adipisl elit, sed do eiusmod tempor incidio ut labore et dolore magna aliqua.</p>
+                    <div class="blog-text">
+                        <p class="blog-date"> By: Admin 24 April 2021</p>
+                        <h4>There Are Many Variations</h4>
+                        <p class="blog-text">Lorem ipsum dolor sit amet, consecteturl adipisl elit, sed do eiusmod tempor incidio ut labore et dolore magna aliqua.</p>
+                    </div>
                     <img src="./assets/blog1.jpeg" alt="Picture of a catctus in the sun">
                 </div>
 
                 <div class="blog-post-3 blog-post-child">
-                    <p class="blog-date"> By: Admin 24 April 2021</p>
-                    <h4>Maecenas Laoreet Massa</h4>
-                    <p class="blog-text">Lorem ipsum dolor sit amet, consecteturl adipisl elit, sed do eiusmod tempor incidio ut labore et dolore magna aliqua.</p>
+                    <div class="blog-text">
+                        <p class="blog-date"> By: Admin 24 April 2021</p>
+                        <h4>Maecenas Laoreet Massa</h4>
+                        <p class="blog-text">Lorem ipsum dolor sit amet, consecteturl adipisl elit, sed do eiusmod tempor incidio ut labore et dolore magna aliqua.</p>
+                    </div>
                     <img src="./assets/blog2.jpeg" alt="Person with a shovel about to unroot a plant from its pot">
                 </div>
             </div>
