additional add to cart code

--- a/index.html
+++ b/index.html
@@ -46,9 +46,14 @@
                     </ul>
                 </div>
 
-                <div class="shopping-bag-container">
+                <div  class="shopping-bag-container">
                     <img src="./assets/icons/shopping-bag.svg" alt="Shopping bag icon">
-                    <span class="sup" id="cart">0</span>
+                    <ul id="cartContainer"
+
+                    </ul>
+
+                
+                    <!--<span class="sup" id="cart">0</span>-->
                 </div>
             </div>
         </section>
