added responsiveness to collections

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <!-- Collection Section -->
         <section class="collection">
             <div class="wrapper">
-                <div class="collection-parent collect-parent-1">
+                <div class="collection-parent">
                     <div class="collection-child collection-child-1">
                         <p>Collection of Cactus</p>
                         <h3>Pottery Pots & Plant</h3>
@@ -150,9 +150,7 @@
                         <h3>Plant Port</h3>
                         <button id="shop-now">Shop Now</button>
                     </div>
-                </div>
 
-                <div class="collection-parent collection-parent-2">
                     <div class="collection-child collection-child-3">
                         <p>New Collection</p>
                         <h3>Plant Port</h3>
