add to cart tally

--- a/index.html
+++ b/index.html
@@ -48,12 +48,13 @@
 
                 <div  class="shopping-bag-container">
                     <img src="./assets/icons/shopping-bag.svg" alt="Shopping bag icon">
+                     <span class="sup" id="cart"></span>
                     <ul id="cartContainer"
 
                     </ul>
 
                 
-                    <!--<span class="sup" id="cart">0</span>-->
+                   
                 </div>
             </div>
         </section>
