pushing updated javascript code + additional style on contact page

--- a/contact.html
+++ b/contact.html
@@ -99,7 +99,7 @@
                             <fieldset class="second-row">
                                 <div class="phone">
                                     <label for="phone" class="sr-only">Phone</label>
-                                    <input type="tel" placeholder="Phone* (xxx-xxx-xxxx)" id="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
+                                    <input type="tel" placeholder="Phone*" id="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
                                 </div>
                     
                                 <div class="email">
